fix header and empty message font size on mobile

--- a/src/Components/MoviesList/MoviesList.module.scss
+++ b/src/Components/MoviesList/MoviesList.module.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     font-size: 20px;
     font-weight: bold;
-    margin: 0;
+    margin: 20px 0;
     text-decoration: underline;
   }
   .moviesContainer {
