--- a/src/Components/SectionHeader/SectionHeader.module.scss
+++ b/src/Components/SectionHeader/SectionHeader.module.scss
@@ -10,7 +10,7 @@
   }
   @media screen and(max-width: 640px) {
     .title {
-      font-size: 16px;
+      font-size: 28px;
     }
   }
 }
